syntax = "proto3";

package com.road.yishi.proto.active;

message ActiveRspMsg {
  repeated int32 activeRspInfo = 1;
}
